stopped error messages from shifting form contents

--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -5,10 +5,10 @@
     margin-top: 50px;
     text-align: center;
     margin: auto;
-    border: 1px solid black;
+    border: 2px solid rgb(85, 85, 85);
     border-radius: 5px;
     background-color: rgba(147, 232, 224, 0.262);
-    box-shadow: 0 6px 6px -4px rgb(80, 80, 80);
+    box-shadow: 0 4px 12px -2px rgb(110, 110, 110);
     margin-bottom: 50px;
 }
 
@@ -16,11 +16,24 @@
     padding: 25px;
     text-align: center;
     margin: 30px auto;
+    position: relative;
+
 }
 .formItem {
   padding: 5px;
-  margin-bottom: 6px;
+  margin-bottom: 12px;
 }
 .formBox{
   background-color: whitesmoke;
+}
+.alertMsg2 {
+  position: absolute;
+  top: -15px;
+  width: 90%;
+  z-index: 2;
+  margin: 0 auto;
+  padding: 6px;
+  border-radius: 6px;
+  font-size: 0.9rem;
+  background-color: rgba(238, 45, 45, 0.3);
 }
