--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -1,7 +1,8 @@
 .registration {
     padding: 25px;
     text-align: center;
-    margin: 6px auto;
+    margin: 12px auto 0 auto;
+    position: relative;
 }
 .formFooter{
   margin: 9px;
@@ -24,4 +25,15 @@ Label {
 }
 .formBox {
     background-color: whitesmoke;
+}
+.alertMsg {
+    position: absolute;
+    top: -9px;
+    width: 90%;
+    z-index: 2;
+    margin: 0 auto;
+    padding: 3px;
+    border-radius: 6px;
+    font-size: 0.8rem;
+    background-color: rgba(238, 45, 45, 0.3);
 }
